<resources>
    <string name="app_name">Shadows Of Brimstone Companion</string>
    <string name="action_settings">Settings</string>
    <string name="class_text">Class</string>
    <string name="character_text">Character</string>
    <string name="gear_text">Gear</string>
    <string name="clothing_text">Clothing</string>
    <string name="melee_text">Melee Weapons</string>
    <string name="ranged_text">Ranged Weapons</string>
    <string name="invalid_text">INVALID ENTRY DETECTED</string>
    <string name="products">Product List</string>
    <string name="debug">Debug</string>
    <string name="title_activity_create_character">CreateCharacterActivity</string>
    <string name="hint_enter_name">Enter Character Name</string>
    <string name="agility">AGILITY</string>
    <string name="cunning">CUNNING</string>
    <string name="spirit">SPIRIT</string>
    <string name="strength">STRENGTH</string>
    <string name="lore">LORE</string>
    <string name="luck">LUCK</string>
    <string name="health">HEALTH</string>
    <string name="defense">DEFENSE</string>
    <string name="armor">ARMOR</string>
    <string name="sanity">SANITY</string>
    <string name="willpower">WILLPOWER</string>
    <string name="spirit_armor">SPIRIT ARMOR</string>
    <string name="title_activity_finish_character">FinishCharacterActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Class Name</string>
    <string name="create">CREATE</string>
    <string name="choose_upgrade">CHOOSE YOUR UPGRADE</string>
    <string name="choose_class">CHOOSE YOUR CLASS</string>
    <string name="starting_gear">Starting Gear</string>
    <string name="shadows">SHADOWS\nOF\nBRIMSTONE</string>
    <string name="accept">Accept</string>
    <string name="restart">Restart</string>
    <string name="spoils">Spoils</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_shadows_of_brimstone">ShadowsOfBrimstoneActivity</string>
    <string name="choose_weapon">CHOOSE YOUR WEAPON</string>
    <string name="equip">Equip</string>
    <string name="combat_view">Combat</string>
    <string name="unequip">Unequip</string>
    <string name="destroy">Destroy</string>
    <string name="sell">Sell</string>
    <string name="NA">NA</string>
    <string name="choose_clothing">Choose Clothing</string>
    <string name="settings">Settings</string>
    <string name="church">Church</string>
    <string name="general_store">General Store</string>
    <string name="blacksmith">Blacksmith</string>
    <string name="docs_office">Doc\'s Office</string>
    <string name="frontier_outpost">Frontier Outpost</string>
    <string name="saloon">Saloon</string>
    <string name="initiative">Initiative</string>
    <string name="move">Move</string>
    <string name="attachment_text">Attachments</string>
    <string name="clothing">Clothing</string>
    <string name="loadout">Change Loadout</string>
    <string name="upgrade_text">Upgrades</string>
    <string name="level_up">Level Up</string>
    <string name="notes">Notes</string>
    <string name="max_grit">Max Grit</string>
    <string name="sheriffs_office">Sheriff\'s Office</string>
    <string name="smugglers_den">Smuggler\'s Den</string>
    <string name="mutant_quarter">Mutant Quarter</string>
    <string name="gambling_hall">Gambling Hall</string>
    <string name="street_market">Street Market</string>
    <string name="indian_trading_outpost">Indian Trading Outpost</string>
    <string name="inventory">Inventory</string>
    <string name="hat">Hat</string>
    <string name="face">Face</string>
    <string name="shoulders">Shoulders</string>
    <string name="torso">Torso</string>
    <string name="gloves">Gloves</string>
    <string name="belt">Belt</string>
    <string name="pants">Pants</string>
    <string name="boots">Boots</string>
    <string name="coat">Coat</string>
    <string name="weight">Weight</string>
    <string name="weapons">Equipped Weapon(s)</string>
    <string name="max_side_bag">Side Bag\nCapacity</string>
    <string name="max_corruption">Max\nCorruption</string>
    <string name="title_activity_management_menu">ManagementMenuActivity</string>
    <string name="side_bag">Side Bag</string>
    <string name="corruption">Corruption</string>
    <string name="conditions">Conditions</string>
    <string name="range">Range</string>
    <string name="shots">Shots</string>
    <string name="hit">Hit</string>
    <string name="damage">Damage</string>
    <string name="injuries">Injuries</string>
    <string name="madness">Madness</string>
    <string name="mutations">Mutations</string>
    <string name="other">Other</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="home">Character Main</string>
    <string name="treasure">Treasure</string>
</resources>
