<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/quick_clothes_layout"
    android:background="@drawable/button_background"
    android:gravity="center"
    android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quick_hat"
            android:layout_margin="4dp"
            android:textColorHint="@color/colorAccent"
            android:background="@android:color/background_dark"
            android:textColor="@color/colorPrimary"
            android:hint="@string/hat"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:id="@+id/quick_face"
            android:textColorHint="@color/colorAccent"
            android:background="@android:color/background_dark"
            android:textColor="@color/colorPrimary"
            android:hint="@string/face"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:id="@+id/quick_shoulders"
            android:textColorHint="@color/colorAccent"
            android:background="@android:color/background_dark"
            android:textColor="@color/colorPrimary"
            android:hint="@string/shoulders"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            android:layout_margin="4dp"
            android:id="@+id/squick_torso"
            android:background="@android:color/background_dark"
            android:textColor="@color/colorPrimary"
            android:hint="@string/torso"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quick_gloves"
            android:textColorHint="@color/colorAccent"
            android:background="@android:color/background_dark"
            android:layout_margin="4dp"
            android:textColor="@color/colorPrimary"
            android:hint="@string/gloves"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quick_belt"
            android:textColorHint="@color/colorAccent"
            android:background="@android:color/background_dark"
            android:layout_margin="4dp"
            android:textColor="@color/colorPrimary"
            android:hint="@string/belt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quick_pants"
            android:textColorHint="@color/colorAccent"
            android:background="@android:color/background_dark"
            android:layout_margin="4dp"
            android:textColor="@color/colorPrimary"
            android:hint="@string/pants"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quick_boots"
            android:textColorHint="@color/colorAccent"
            android:background="@android:color/background_dark"
            android:layout_margin="4dp"
            android:textColor="@color/colorPrimary"
            android:hint="@string/boots"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quick_coat"
            android:textColorHint="@color/colorAccent"
            android:background="@android:color/background_dark"
            android:layout_margin="4dp"
            android:textColor="@color/colorPrimary"
            android:hint="@string/coat"/>
    </LinearLayout>

</LinearLayout>