<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/injuries"
        android:text="@string/injuries"
        android:background="@drawable/button_background"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/madness"
        android:text="@string/madness"
        android:background="@drawable/button_background"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mutations"
        android:text="@string/mutations"
        android:background="@drawable/button_background"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/other_conditions"
        android:text="@string/other"
        android:background="@drawable/button_background"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"/>

</LinearLayout>