<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".Activities.Menu.CreateCharacterActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="50sp"
        android:textStyle="bold"
        android:paddingBottom="96dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="48dp"
        android:layout_gravity="center|center_horizontal">
        <include layout="@layout/content_character_stats" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/choose_upgrade"
                android:text="@string/choose_upgrade"
                android:textColor="@android:color/holo_blue_bright"
                android:textAlignment="center"
                android:textStyle="italic|bold"
                android:textSize="32sp"/>
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:visibility="visible">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_skills"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:visibility="visible"
                android:textAlignment="center"
                tools:listitem="@layout/recyclerview_character">
            </android.support.v7.widget.RecyclerView>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|center_horizontal"
        android:weightSum="4"
        android:paddingBottom="48dp">

        <EditText
            android:id="@+id/character_name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/hint_enter_name"
            android:textColorHint="@android:color/holo_blue_bright"/>

        <Button
            android:id="@+id/create_button"
            style="?metaButtonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create" />
    </LinearLayout>
    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">




        </LinearLayout>
    </FrameLayout>

</FrameLayout>