<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".Activities.Main.Inventory.RemoveItems.RemoveGearActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/content_resources"/>
        <include layout="@layout/content_choose_item"/>


    </LinearLayout>
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:fitsSystemWindows="true"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btn_sell"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:textColor="@android:color/holo_blue_bright"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/sell" />
            <Button
                android:id="@+id/btn_destroy"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:background="@drawable/button_background"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_bright"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/destroy" />
            <Button
                android:id="@+id/btn_cancel"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:textColor="@android:color/holo_blue_bright"
                android:background="@drawable/button_background"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/cancel" />

        </LinearLayout>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>